# trap-mafia

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
apps/backend/: main.py  pyproject.toml  pytest.ini
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 03bb608dbe7e_create_users_table.py  073a1b1e3e6f_add_phases_table.py  516166305415_room_and_roommember.py  658f74da6d22_user_room_room_membership.py  8ac9c5d5b7f0_add_case_player_team.py  a987840a0e7e_add_room_name.py  d3181900b419_change_room_name_to_name.py  e486653457ec_add_is_timeout_auto_and_contraints_on_.py  f28741778445_add_case_related_models.py  fbacadb30ed4_add_case_actions_vote_phase_states_.py
apps/backend/app/: mvp.py
apps/backend/app/api/: health.py  router.py  routes.py
apps/backend/app/api/auth/: routes.py  session.py
apps/backend/app/api/cases/: case.py
apps/backend/app/core/: auth.py  config.py  error_codes.py  exception_handler.py  exceptions.py  middleware.py
apps/backend/app/db/: session.py
apps/backend/app/domain/: constants.py  enum.py  events.py  types.py
apps/backend/app/infra/: redis.py
apps/backend/app/models/: __init__.py  auth.py  case.py  case_snapshot.py  room.py
apps/backend/app/queries/: deps.py  room_snapshot.py
apps/backend/app/realtime/: realtime.py  routes.py  sse.py
apps/backend/app/repositories/: case.py  case_action.py  case_history.py  case_player.py  deps.py  phase.py  projections.py  room.py  room_member.py  user.py
apps/backend/app/schemas/: base.py
apps/backend/app/services/: auth.py  case.py  deps.py  redis.py  room.py
apps/backend/tests/: conftest.py
apps/backend/tests/_helpers/: auth.py  entity.py  envelope_assert.py  room_actions.py  sse.py  validators.py
apps/backend/tests/api/: conftest.py  test_health.py
apps/backend/tests/realtime/: conftest.py
apps/backend/tests/unit/: conftest.py
(+322 files in other folders)
